fix overflow x issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -714,6 +714,9 @@ video {
 .overflow-scroll {
   overflow: scroll;
 }
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
 .rounded {
   border-radius: 0.25rem;
 }
